--- a/jose/dashboard.html
+++ b/jose/dashboard.html
@@ -12,74 +12,91 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
     integrity="sha512-iBBXm8fW90+nuLcSKlbmrPcLa0OT92xO1BIsZ+ywDWZCvqsWgccV3gFoRBv0z+8dLJgyAHIhR35VZc2oM/gI1w=="
     crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/main.css" />
-    <link rel="stylesheet" href="css/dashboard.css" />
+  <link rel="stylesheet" href="css/main.css" />
+  <link rel="stylesheet" href="css/dashboard.css" />
 </head>
 
 <body class="sidebar-open">
   <header class="header">
-    <div class="navbar-wrapper">
-      <a href="index.html">
-        <figure class="logo">
-          <img src="../images/company_logo.png" alt="Company logo">
-          <span class="page-title">
-            Sandbox 123
-          </span>
-        </figure>
-      </a>
+    <a href="index.html">
+      <figure class="logo">
+        <img src="images/company_logo.png" alt="Company logo">
+        <span class="logo__page-title">
+          Sandbox
+        </span>
+      </figure>
+    </a>
 
-      <nav class="navbar">
-        <ul class="menu-list">
-          <li class="menu-item">
-            <a href="products/index.html">Products</a>
-          </li>
-          <li class="menu-item">
-            <a href="dashboard.html">Dashboard</a>
-          </li>
-          <li class="menu-item">
-            <a href="components/buttons/index.html">Buttons</a>
-          </li>
-          <li class="menu-item">
-            <a href="components/cards/index.html">Cards</a>
-          </li>
-          <li class="menu-item">
-            <a href="components/forms/index.html">Forms</a>
-          </li>
-          <li class="menu-item">
-            <a href="components/sidebar/index.html">Sidebar</a>
-          </li>
-          <li class="menu-item">
-            <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item--active">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="menu__item">
+          <a href="products/index.html">Products</a>
+        </li>
+        <li class="menu__item">
+          <a href="dashboard.html">Dashboard</a>
+        </li>
+        <li class="menu__item--expandable">
+          <span>Components</span>
+          <ul class="menu__dropdown menu__list">
+            <li class="dropdown__item">
+              <a href="components/cards/index.html">Cards</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/forms/index.html">Forms</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/grid/index.html">Grid</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/sidebar/index.html">Sidebar</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/table/index.html">Table</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/tabs/tabs.html">Tabs</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/slider/index.html">Slider</a>
+            </li>
+          </ul>
+        </li>
+        <li class="menu__item">
+          <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
+        </li>
+      </ul>
+    </nav>
   </header>
-  <nav class="sidebar-nav">
-    <figure class="image logo">
-      <img src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/f8903b05-cb23-4f4e-bf68-9546c4d368e7/d5difqb-f7c02d4a-1493-44a9-a4ce-502a7e7e928f.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvZjg5MDNiMDUtY2IyMy00ZjRlLWJmNjgtOTU0NmM0ZDM2OGU3XC9kNWRpZnFiLWY3YzAyZDRhLTE0OTMtNDRhOS1hNGNlLTUwMmE3ZTdlOTI4Zi5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.lMLywq-Jz72_td2HyI4T1Q7ckkjeJch0Vo62dFMBf30" alt="My user's face">
+  <nav class="vertical-nav">
+    <figure class="logo image vertical-nav__logo">
+      <img
+        src="https://images-wixmp-ed30a86b8c4ca887773594c2.wixmp.com/f/f8903b05-cb23-4f4e-bf68-9546c4d368e7/d5difqb-f7c02d4a-1493-44a9-a4ce-502a7e7e928f.png?token=eyJ0eXAiOiJKV1QiLCJhbGciOiJIUzI1NiJ9.eyJzdWIiOiJ1cm46YXBwOiIsImlzcyI6InVybjphcHA6Iiwib2JqIjpbW3sicGF0aCI6IlwvZlwvZjg5MDNiMDUtY2IyMy00ZjRlLWJmNjgtOTU0NmM0ZDM2OGU3XC9kNWRpZnFiLWY3YzAyZDRhLTE0OTMtNDRhOS1hNGNlLTUwMmE3ZTdlOTI4Zi5wbmcifV1dLCJhdWQiOlsidXJuOnNlcnZpY2U6ZmlsZS5kb3dubG9hZCJdfQ.lMLywq-Jz72_td2HyI4T1Q7ckkjeJch0Vo62dFMBf30"
+        alt="My user's face">
     </figure>
-    <ul class="menu-list">
-      <li class="menu-item is-active">
+    <ul class="menu__list">
+      <li class="menu__item--active">
         <a href=""><i class="fas fa-home"></i></a>
       </li>
-      <li class="menu-item">
+      <li class="menu__item">
         <a href=""><i class="fas fa-user-cog"></i>
         </a>
       </li>
-      <li class="menu-item">
+      <li class="menu__item">
         <a href=""><i class="fas fa-user-cog"></i>
         </a>
       </li>
-      <li class="menu-item">
+      <li class="menu__item">
         <a href=""><i class="fas fa-user-cog"></i>
         </a>
       </li>
-      <li class="menu-item">
+      <li class="menu__item">
         <a href=""><i class="fas fa-table"></i></a>
       </li>
     </ul>
-    <figure class="image user-face">
+    <figure class="image vertical-nav__user">
       <img src="https://randomuser.me/api/portraits/men/32.jpg" alt="My user's face">
     </figure>
   </nav>
@@ -91,27 +108,27 @@
           <aside class="sidebar">
             <div class="card">
               <div class="card-content">
-                <nav>
+                <nav class="sidebar">
                   <h5 class="title is-5">Side navigation</h5>
-                  <ul class="menu-list">
-                    <li class="menu-item">
+                  <ul class="menu__list">
+                    <li class="menu__item">
                       <a href=""><i class="fas fa-home"></i> Home</a>
                     </li>
-                    <li class="menu-item">
+                    <li class="menu__item">
                       <a href=""><i class="fas fa-user-cog"></i> Management
                         <i class="fas fa-chevron-down"></i>
                         <i class="fas fa-chevron-up"></i>
                       </a>
-                      <ul class="dropdown menu-list">
-                        <li class="menu-item">
+                      <ul class="dropdown menu__list">
+                        <li class="menu__item">
                           <a href="">Things</a>
                         </li>
-                        <li class="menu-item">
+                        <li class="menu__item">
                           <a href="">Other things</a>
                         </li>
                       </ul>
                     </li>
-                    <li class="menu-item is-active">
+                    <li class="menu__item is-active">
                       <a href=""><i class="fas fa-table"></i> Table</a>
                     </li>
                   </ul>
@@ -525,7 +542,7 @@
 
     </section>
     <script>
-      const element = document.querySelector('.menu-item');
+      const element = document.querySelector('.menu__item');
       const dropdown = element.querySelector('.dropdown');
 
       element[2].addEventListener('click', () => { dropdown[0].style.display = 'block' });
