--- a/jose/index.html
+++ b/jose/index.html
@@ -19,38 +19,57 @@
 <body>
 
     <header class="header">
-        <div class="navbar-wrapper">
-            <a href="index.html">
-                <figure class="logo">
-                    <img src="images/company_logo.png" alt="Company logo">
-                    <span class="page-title">
-                        Sandbox
-                    </span>
-                </figure>
-            </a>
+        <a href="index.html">
+            <figure class="logo">
+                <img src="images/company_logo.png" alt="Company logo">
+                <span class="logo__page-title">
+                    Sandbox
+                </span>
+            </figure>
+        </a>
 
-            <nav class="navbar">
-                <ul class="menu-list">
-                    <li class="menu-item">
-                        <a href="components/buttons/index.html">Buttons</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="components/cards/index.html">Cards</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="components/forms/index.html">Forms</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="components/sidebar/index.html">Sidebar</a>
-                    </li>
-                    <li class="menu-item">
-                        <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
-                    </li>
-                </ul>
-            </nav>
-        </div>
-
-
+        <nav class="menu">
+            <ul class="menu__list">
+                <li class="menu__item--active">
+                    <a href="index.html">Home</a>
+                </li>
+                <li class="menu__item">
+                    <a href="products/index.html">Products</a>
+                </li>
+                <li class="menu__item">
+                    <a href="dashboard.html">Dashboard</a>
+                </li>
+                <li class="menu__item--expandable">
+                    <span>Components</span>
+                    <ul class="menu__dropdown menu__list">
+                        <li class="dropdown__item">
+                            <a href="components/cards/index.html">Cards</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/forms/index.html">Forms</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/grid/index.html">Grid</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/sidebar/index.html">Sidebar</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/table/index.html">Table</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/tabs/tabs.html">Tabs</a>
+                        </li>
+                        <li class="dropdown__item">
+                            <a href="components/slider/index.html">Slider</a>
+                        </li>
+                    </ul>
+                </li>
+                <li class="menu__item">
+                    <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
+                </li>
+            </ul>
+        </nav>
     </header>
 
     <main id="content">
@@ -58,14 +77,12 @@
             <div class="container">
                 <div class="row">
                     <div class="column is-7 is-vertical-top">
-                        <h1 class="title is-1">
+                        <h1 class="hero__title">
                             The platform for local-first software.
                         </h1>
-                        <p>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                            Deserunt facere non iure totam, a asperiores
-                            qui perferendis debitis sed aliquam.
-                        </p>
+                        <h2 class="hero__subtitle">
+                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Adipisci, consequuntur?
+                        </h2>
                         <div class="row is-small">
                             <div class="column is-7">
                                 <div class="field">
