--- a/jose/products/index.html
+++ b/jose/products/index.html
@@ -17,62 +17,83 @@
 
 <body>
   <header class="header">
-    <div class="navbar-wrapper">
-      <a href="index.html">
-        <figure class="logo">
-          <img src="images/company_logo.png" alt="Company logo">
-          <span class="page-title">
-            Sandbox
-          </span>
-        </figure>
-      </a>
+    <a href="index.html">
+      <figure class="logo">
+        <img src="images/company_logo.png" alt="Company logo">
+        <span class="logo__page-title">
+          Sandbox
+        </span>
+      </figure>
+    </a>
 
-      <nav class="navbar">
-        <ul class="menu-list">
-          <li class="menu-item">
-            <a href="../products/index.html">Products</a>
-          </li>
-          <li class="menu-item">
-            <a href="../dashboard.html">Dashboard</a>
-          </li>
-          <li class="menu-item">
-            <a href="../components/buttons/index.html">Buttons</a>
-          </li>
-          <li class="menu-item">
-            <a href="../components/cards/index.html">Cards</a>
-          </li>
-          <li class="menu-item">
-            <a href="../components/forms/index.html">Forms</a>
-          </li>
-          <li class="menu-item">
-            <a href="../components/sidebar/index.html">Sidebar</a>
-          </li>
-          <li class="menu-item">
-            <a href="../login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <nav class="menu">
+      <ul class="menu__list">
+        <li class="menu__item--active">
+          <a href="index.html">Home</a>
+        </li>
+        <li class="menu__item">
+          <a href="products/index.html">Products</a>
+        </li>
+        <li class="menu__item">
+          <a href="dashboard.html">Dashboard</a>
+        </li>
+        <li class="menu__item--expandable">
+          <span>Components</span>
+          <ul class="menu__dropdown menu__list">
+            <li class="dropdown__item">
+              <a href="components/cards/index.html">Cards</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/forms/index.html">Forms</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/grid/index.html">Grid</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/sidebar/index.html">Sidebar</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/table/index.html">Table</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/tabs/tabs.html">Tabs</a>
+            </li>
+            <li class="dropdown__item">
+              <a href="components/slider/index.html">Slider</a>
+            </li>
+          </ul>
+        </li>
+        <li class="menu__item">
+          <a href="login.html" class="button is-success is-small" style="margin-left:16px;">Login</a>
+        </li>
+      </ul>
+    </nav>
   </header>
   <main id="content">
     <div class="container">
       <section class="section product-section">
         <ul class="breadcrumb">
           <li>Products</li>
-          <li>
-            <span class="icon">
-              <i class="fas fa-chevron-right"></i>
-            </span>
-          </li>
           <li>Maquinas de lavar roupa</li>
         </ul>
-        <div class="product-banner">
+        <div class="banner">
           <figure class="image">
             <img src="https://unsplash.com/photos/qCbctB66bp4/download?force=true" alt="">
           </figure>
+          <div class="banner__detail">
+            <h1 class="title is-3">
+              Lorem, ipsum dolor.
+            </h1>
+            <h2 class="subtitle is-4">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Magnam, ex!
+            </h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Neque non suscipit ipsa provident distinctio tempora voluptatem iste libero, nostrum natus.
+            </p>
+          </div>
         </div>
         <div class="row">
-          <div class="column is-4">
+          <div class="column is-3">
             <div class="card">
               <div class="card-content">
                 <label>
@@ -136,7 +157,7 @@
             </div>
 
           </div>
-          <div class="column is-9">
+          <div class="column">
             <div class="card">
               <div class="card-content">
                 <div class="product-controls">
@@ -167,221 +188,75 @@
                 <div class="products-list">
                   <div class="row is-multiline">
                     <div class="column is-4">
-                      <figure class="image">
-                        <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                      </figure>
-                      <div class="product-detail">
-                        <h3 class="title is-4">
-                          Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-                        </h3>
-                        <div class="stars">
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
+                      <article class="product">
+                        <figure class="product__image">
+                          <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
+                        </figure>
+                        <a href="product-1.html" class="product__detail">
+                          <h3 class="title is-4">
+                            Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
+                          </h3>
+                          <div class="stars">
+                            <span class="icon">
+                              <i class="fas fa-star"></i>
+                            </span>
+                            <span class="icon">
+                              <i class="fas fa-star"></i>
+                            </span>
+                            <span class="icon">
+                              <i class="fas fa-star"></i>
+                            </span>
+                            <span class="icon">
+                              <i class="fas fa-star-half-alt"></i>
+                            </span>
+                            <span class="icon">
+                              <i class="far fa-star"></i>
+                            </span>
+                          </div>
+
+                          <p class="sales-price">$299</p>
+                          <p class="price">$399</p>
+
+                          <p style="margin-bottom:16px;">
+                            <span class="has-text-green">
+                              <i class="fas fa-star" style="display:inline-block;margin-right:4px;"></i>
+                              Disponível
+                            </span>
+                          </p>
+                        </a>
+
+                        <div class="product__tags">
+                          <span class="product__tag is-yellow">
+                            Something
                           </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star-half-alt"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="far fa-star"></i>
+                          <span class="product__tag is-yellow">
+                            Other thing
                           </span>
                         </div>
 
-                        <p class="sales-price">$299</p>
-                        <p class="price">$399</p>
-
-                        <p style="margin-bottom:16px;">
-                          <span class="has-text-green">
-                            <i class="fas fa-star" style="display:inline-block;margin-right:4px;"></i>
-                            Disponível
-                          </span>
-                        </p>
-                      </div>
+                      </article>
                     </div>
-                    <div class="column is-4">
-                      <figure class="image">
-                        <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                      </figure>
-                      <div class="product-detail">
-                        <h3 class="title is-4">
-                          Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-                        </h3>
-                        <div class="stars">
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star-half-alt"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="far fa-star"></i>
-                          </span>
-                        </div>
 
-                        <p class="sales-price">$299</p>
-                        <p class="price">$399</p>
+                  </div>
 
-
-                        <p style="margin-bottom:16px;">
-                          <span class="has-text-green"> <i class="fas fa-star"
-                              style="display:inline-block;margin-right:4px;"></i>Disponível</span>
-                        </p>
-                      </div>
+                  <div class="pagination">
+                    <div class="page--active">
+                      <a href="" class="page__item">1</a>
                     </div>
-                    <div class="column is-4">
-                      <figure class="image">
-                        <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                      </figure>
-                      <div class="product-detail">
-                        <h3 class="title is-4">
-                          Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-                        </h3>
-                        <div class="stars">
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star-half-alt"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="far fa-star"></i>
-                          </span>
-                        </div>
-
-                        <p class="sales-price">$299</p>
-                        <p class="price">$399</p>
-
-
-                        <p style="margin-bottom:16px;">
-                          <span class="has-text-green"> <i class="fas fa-star"
-                              style="display:inline-block;margin-right:4px;"></i>Disponível</span>
-                        </p>
-                      </div>
+                    <div class="page">
+                      <a href="" class="page__item">2</a>
                     </div>
-                    <div class="column is-4">
-                      <figure class="image">
-                        <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                      </figure>
-                      <div class="product-detail">
-                        <h3 class="title is-4">
-                          Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-                        </h3>
-                        <div class="stars">
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star-half-alt"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="far fa-star"></i>
-                          </span>
-                        </div>
-
-                        <p class="sales-price">$299</p>
-                        <p class="price">$399</p>
-
-
-                        <p style="margin-bottom:16px;">
-                          <span class="has-text-green"> <i class="fas fa-star"
-                              style="display:inline-block;margin-right:4px;"></i>Disponível</span>
-                        </p>
-                      </div>
+                    <div class="page">
+                      <a href="" class="page__item">3</a>
                     </div>
-                    <div class="column is-4">
-                      <figure class="image">
-                        <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                      </figure>
-                      <div class="product-detail">
-                        <h3 class="title is-4">
-                          Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-                        </h3>
-                        <div class="stars">
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star-half-alt"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="far fa-star"></i>
-                          </span>
-                        </div>
-
-                        <p class="sales-price">$299</p>
-                        <p class="price">$399</p>
-
-
-                        <p style="margin-bottom:16px;">
-                          <span class="has-text-green"> <i class="fas fa-star"
-                              style="display:inline-block;margin-right:4px;"></i>Disponível</span>
-                        </p>
-                      </div>
+                    <div class="page">
+                      <span class="page__item--separator">...</span>
                     </div>
-                    <div class="column is-4">
-                      <figure class="image">
-                        <img src="https://unsplash.com/photos/164_6wVEHfI/download?force=true" alt="">
-                      </figure>
-                      <div class="product-detail">
-                        <h3 class="title is-4">
-                          Jogo Nintendo Switch Super Mario 3D World + Bowser's Fury
-                        </h3>
-                        <div class="stars">
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="fas fa-star-half-alt"></i>
-                          </span>
-                          <span class="icon">
-                            <i class="far fa-star"></i>
-                          </span>
-                        </div>
-
-                        <p class="sales-price">$299</p>
-                        <p class="price">$399</p>
-
-
-                        <p style="margin-bottom:16px;">
-                          <span class="has-text-green"> <i class="fas fa-star"
-                              style="display:inline-block;margin-right:4px;"></i>Disponível</span>
-                        </p>
-                      </div>
+                    <div class="page">
+                      <span class="page__item">7</span>
+                    </div>
+                    <div class="page">
+                      <span class="page__item"><i class="fas fa-chevron-right" style="font-size:80%"></i></span>
                     </div>
                   </div>
                 </div>
